--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
                   >Entraînez-vous avec moi</a
                 >
                 <a class="english nav-link" href="#services">Train with me</a>
-                <!-- <a class="french nav-link" href="#testimonials">Témoignages</a>
+                <a class="french nav-link" href="#testimonials">Témoignages</a>
                 <a class="english nav-link" href="#testimonials"
                   >Testimonials</a
-                > -->
+                >
                 <a class="nav-link" href="#contact">Contact</a>
                 <a class="french nav-link" href="#gallery">Galerie</a>
                 <a class="english nav-link" href="#gallery">Gallery</a>
@@ -281,12 +281,12 @@
         <button
           class="french btn-standard btn-color contact-btn about-contact-btn"
         >
-          <a href="mailto:diafabe14@gmail.com"> Contactez-moi</a>
+          <a href="mailto:diafabe14@gmail.com">Contactez-moi</a>
         </button>
         <button
           class="english btn-standard btn-color contact-btn about-contact-btn"
         >
-          <a href="mailto:diafabe14@gmail.com"> Contact me</a>
+          <a href="mailto:diafabe14@gmail.com">Contact me</a>
         </button>
       </section>
       <hr />
@@ -384,58 +384,66 @@
         </p>
       </section>
       <hr />
-      <!-- <section class="testimonials">
+      <section class="testimonials">
         <a id="testimonials"></a>
         <h2 class="french">Témoignages</h2>
         <h2 class="english">Testimonials</h2>
         <div class="testimonials-container">
-        <div class="testimonial card">
-          <div class="card-body">
-            <blockquote class="blockquote mb-0">
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
-                posuere erat a ante.
-              </p>
-              <footer class="blockquote-footer">Name of person quoted</footer>
-            </blockquote>
+          <div class="testimonial card">
+            <div class="card-body">
+              <blockquote class="blockquote mb-0">
+                <p class="french">
+                  Fabé est une coach exceptionelle avec une grande empathie et
+                  toujours bienveillante. Elle nous pousse à nous dépasser ! Je
+                  recommande à 200%<br />⭐️⭐️⭐️⭐️⭐️
+                </p>
+                <p class="english">
+                  Fabé is an exceptional coach, who is very empathetic and kind.
+                  She always pushes us to challenge ourselves, and I would
+                  recommend her 200%<br />⭐️⭐️⭐️⭐️⭐️
+                </p>
+                <footer class="blockquote-footer">
+                  Sandy (V-Forme, Carcès)
+                </footer>
+              </blockquote>
+            </div>
           </div>
-        </div>
-        <div class="testimonial card">
-          <div class="card-body">
-            <blockquote class="blockquote mb-0">
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
-                posuere erat a ante.
-              </p>
-              <footer class="blockquote-footer">Name of person quoted</footer>
-            </blockquote>
+          <!-- <div class="testimonial card">
+            <div class="card-body">
+              <blockquote class="blockquote mb-0">
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  Integer posuere erat a ante.
+                </p>
+                <footer class="blockquote-footer">Name of person quoted</footer>
+              </blockquote>
+            </div>
           </div>
-        </div>
-        <div class="testimonial card">
-          <div class="card-body">
-            <blockquote class="blockquote mb-0">
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
-                posuere erat a ante.
-              </p>
-              <footer class="blockquote-footer">Name of person quoted</footer>
-            </blockquote>
+          <div class="testimonial card">
+            <div class="card-body">
+              <blockquote class="blockquote mb-0">
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  Integer posuere erat a ante.
+                </p>
+                <footer class="blockquote-footer">Name of person quoted</footer>
+              </blockquote>
+            </div>
           </div>
-        </div>
-        <div class="testimonial card">
-          <div class="card-body">
-            <blockquote class="blockquote mb-0">
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
-                posuere erat a ante.
-              </p>
-              <footer class="blockquote-footer">Name of person quoted</footer>
-            </blockquote>
+          <div class="testimonial card">
+            <div class="card-body">
+              <blockquote class="blockquote mb-0">
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  Integer posuere erat a ante.
+                </p>
+                <footer class="blockquote-footer">Name of person quoted</footer>
+              </blockquote>
+            </div>
           </div>
-        </div>
-      </div>
+        </div> -->
       </section>
-      <hr /> -->
+      <hr />
       <section class="contact">
         <a id="contact"></a>
         <h2 class>Contact</h2>
