--- a/index.html
+++ b/index.html
@@ -230,8 +230,8 @@
       </div>
       <section class="about">
         <a id="about-me"></a>
-        <h2 class="french">À propos</h2>
-        <h2 class="english">About me</h2>
+        <h2 class="french gap-top">À propos</h2>
+        <h2 class="english gap-top">About me</h2>
         <div class="socials">
           <a href="https://www.facebook.com/fabe.dia" target="_blank">
             <i class="fa-brands fa-square-facebook fa-xl"></i>
@@ -293,8 +293,8 @@
 
       <section class="services">
         <a id="services"></a>
-        <h2 class="french">Entraînez-vous avec moi</h2>
-        <h2 class="english">Train with me</h2>
+        <h2 class="french gap-top">Entraînez-vous avec moi</h2>
+        <h2 class="english gap-top">Train with me</h2>
         <div class="undraw-container training-benefits">
           <div>
             <img
@@ -386,8 +386,8 @@
       <hr />
       <section class="testimonials">
         <a id="testimonials"></a>
-        <h2 class="french">Témoignages</h2>
-        <h2 class="english">Testimonials</h2>
+        <h2 class="french gap-top">Témoignages</h2>
+        <h2 class="english gap-top">Testimonials</h2>
         <div class="testimonials-container">
           <div class="testimonial card">
             <div class="card-body">
@@ -408,17 +408,19 @@
               </blockquote>
             </div>
           </div>
-          <!-- <div class="testimonial card">
+          <div class="testimonial card">
             <div class="card-body">
               <blockquote class="blockquote mb-0">
                 <p>
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  Integer posuere erat a ante. Lorem ipsum dolor sit amet,
+                  consectetur adipiscing elit. Integer posuere erat a ante.
                   Integer posuere erat a ante.
                 </p>
                 <footer class="blockquote-footer">Name of person quoted</footer>
               </blockquote>
             </div>
-          </div>
+          <!-- </div>
           <div class="testimonial card">
             <div class="card-body">
               <blockquote class="blockquote mb-0">
@@ -446,7 +448,7 @@
       <hr />
       <section class="contact">
         <a id="contact"></a>
-        <h2 class>Contact</h2>
+        <h2 class="gap-top">Contact</h2>
         <h2>Fabé DIA</h2>
         <h3 class="french">Appelez-moi ou envoyez-moi un message sur :</h3>
         <h3 class="english">Call or send me a message on:</h3>
@@ -494,8 +496,8 @@
       <hr />
       <section class="images">
         <a id="gallery"></a>
-        <h2 class="french">Galerie</h2>
-        <h2 class="english">Gallery</h2>
+        <h2 class="french gap-top">Galerie</h2>
+        <h2 class="english gap-top">Gallery</h2>
         <div class="horizontal-gallery">
           <iframe
             width="280"
