add testimonial, change header photo to pilates reformer

--- a/index.html
+++ b/index.html
@@ -121,11 +121,11 @@
         <div class="card">
           <img
             class="card-img-top"
-            src="./images/endurance-cleiton-silva.jpg"
+            src="./images/pilates-reformer-ahmetkurt.jpg"
             alt="Card image cap"
           />
           <div class="card-body">
-            <p class="card-text">ENDURANCE</p>
+            <p class="card-text">PILATES REFORMER</p>
           </div>
         </div>
         <div class="card">
@@ -247,11 +247,7 @@
             alt="Fabé tying shoe laces"
           />
           <p class="about-para french">
-            Bonjour 👋 Je m'appelle Fabé Dia et ... <br /><br />Lorem ipsum
-            dolor sit amet consectetur adipisicing elit. Magnam quasi
-            consequatur repellendus. Eligendi odit unde cupiditate! Praesentium
-            sit sequi beatae sint accusamus nam quis! Perspiciatis hic optio
-            impedit nihil facere.<br /><br />Vous pouvez également lire à mon
+            Bonjour 👋 Je m'appelle Fabé Dia. Je suis une athlète qui a représenté la France lors de deux Jeux olympiques en athlétisme, et je travaille maintenant comme coach sportive dans le Var.<br /><br />Vous pouvez lire à mon
             sujet sur ma page
             <a
               class="underline"
@@ -262,11 +258,7 @@
             plus d'informations sur moi et les services que je propose.
           </p>
           <p class="about-para english">
-            Hello 👋 My name is Fabé Dia and ... <br /><br />Lorem ipsum dolor
-            sit amet consectetur adipisicing elit. Magnam quasi consequatur
-            repellendus. Eligendi odit unde cupiditate! Praesentium sit sequi
-            beatae sint accusamus nam quis! Perspiciatis hic optio impedit nihil
-            facere.<br /><br />You can also read about me on my
+            Hello 👋 My name is Fabé Dia. I am an athlete who represented France in two Olympic Games for athletics, and I now work as a sports coach in the Var.<br /><br />You can also read about me on my
             <a
               class="underline"
               href="https://en.wikipedia.org/wiki/Fab%C3%A9_Dia"
@@ -411,13 +403,10 @@
           <div class="testimonial card">
             <div class="card-body">
               <blockquote class="blockquote mb-0">
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  Integer posuere erat a ante. Lorem ipsum dolor sit amet,
-                  consectetur adipiscing elit. Integer posuere erat a ante.
-                  Integer posuere erat a ante.
+                <p class="french">Ma rencontre avec Fabé a été pour moi un arc en ciel après une après midi de pluie. Je m’étais égaré sur ce que j’aimais et je n’avais plus d’activité physique après avoir toujours été sportive. J’avais pris du poid, j’avais un rapport avec moi même qui était grossier et dévalorisant. Fabé a été pour moi bien plus qu’une coach de sport mais une coach de vie. Elle a su me faire ressortir la personne lumineuse qui étais enfouit en moi. Elle a su me redonner petit à petit confiance en moi, en mes valeurs et mes principes. Elle m’a donné courage à faire du ménage autour de moi et à m’autoriser d’être qui je suis, laisser cette petite fille mal mener s’ouvrir à la vie. Alors voilà vous l’aurez compris Fabé m’a fait souffrir dans le sport 😂 mais quelle liberté et oxygène elle m’a apporter. Je ne pense pas avoir rencontré déjà dans ma vie une personne aussi talentueuse, humble et humaine. Une personne admirable que j’aime profondément.<br />⭐️⭐️⭐️⭐️⭐️
                 </p>
-                <footer class="blockquote-footer">Name of person quoted</footer>
+                <p class="english">Meeting Fabé was like a rainbow after an afternoon of rain. I had lost my way when it came to what I loved, and I was no longer doing any physical activity after having always been an athlete. I had gained weight, and my relationship with myself was harsh and demeaning. Fabé was much more than just a sports coach to me — she was a life coach. She managed to bring out the radiant person that had been buried within me. Little by little, she helped me regain confidence in myself, my values, and my principles. She gave me the courage to clear out the negativity around me and to allow myself to be who I truly am — to let that mistreated little girl open up to life. So yes, as you can imagine, Fabé made me suffer in sports 😂, but what a sense of freedom and breath of fresh air she brought me! I don’t think I’ve ever met someone so talented, humble, and deeply human. An admirable person whom I love dearly.<br />⭐️⭐️⭐️⭐️⭐️</p>
+                <footer class="blockquote-footer">Angélique (Cliente de coaching privé)</footer>
               </blockquote>
             </div>
           <!-- </div>
