add meta keywords

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     />
     <meta
       name="keywords"
-      content="coaching, sport, fitness, coach personnel, athlétisme, course à pied, apprendre à courir, coach sportif, coaching privé, coaching sportif, Var, Provence, Carcès, Brignoles, athlétisme, Jeux olympiques, coureur, sportif, professionnel du sport"
+      content="fabe, dia, fabe dia, coach carces, coach var, coaching, sport, fitness, coach personnel, athlétisme, course à pied, apprendre à courir, coach sportif, coaching privé, coaching sportif, Var, Provence, Carcès, Brignoles, athlétisme, Jeux olympiques, coureur, sportif, professionnel du sport"
     />
     <meta name="author" content="Fabé Dia" />
     <link rel="icon" href="./images/favicon.png" type="image/x-icon" />
