--- a/index.html
+++ b/index.html
@@ -54,6 +54,14 @@
       content="fabe, dia, fabe dia, coach carces, coach var, coaching, sport, fitness, coach personnel, athlétisme, course à pied, apprendre à courir, coach sportif, coaching privé, coaching sportif, Var, Provence, Carcès, Brignoles, athlétisme, Jeux olympiques, coureur, sportif, professionnel du sport"
     />
     <meta name="author" content="Fabé Dia" />
+    <meta property="og:title" content="Fabé Dia" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://fabedia.com" />
+    <meta property="og:image" content="https://www.pexels.com/photo/barbell-on-the-floor-1552252/" />
+    <meta property="og:description" content="Services de coaching proposés par Fabe Dia, coach sportif, qui a participé à deux Jeux olympiques pour la France en athlétisme" />
+    <meta property="og:site_name" content="Fabé Dia" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
     <link rel="icon" href="./images/favicon.png" type="image/x-icon" />
   </head>
 
