--- a/index.html
+++ b/index.html
@@ -3,14 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-DXDDRVQ4M2"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-DXDDRVQ4M2"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-  gtag('config', 'G-DXDDRVQ4M2');
-</script>
+      gtag("config", "G-DXDDRVQ4M2");
+    </script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -66,8 +71,14 @@
     <meta property="og:title" content="Fabé Dia" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://fabedia.com" />
-    <meta property="og:image" content="https://www.pexels.com/photo/barbell-on-the-floor-1552252/" />
-    <meta property="og:description" content="Services de coaching proposés par Fabe Dia, coach sportif, qui a participé à deux Jeux olympiques pour la France en athlétisme" />
+    <meta
+      property="og:image"
+      content="https://www.pexels.com/photo/barbell-on-the-floor-1552252/"
+    />
+    <meta
+      property="og:description"
+      content="Services de coaching proposés par Fabe Dia, coach sportif, qui a participé à deux Jeux olympiques pour la France en athlétisme"
+    />
     <meta property="og:site_name" content="Fabé Dia" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
@@ -264,7 +275,20 @@
             alt="Fabé tying shoe laces"
           />
           <p class="about-para french">
-            Bonjour 👋 Je m'appelle Fabé Dia. Je suis une athlète qui a représenté la France lors de deux Jeux olympiques en athlétisme, et je travaille maintenant comme coach sportive dans le Var.<br /><br />Vous pouvez lire à mon
+            Je suis Fabé Dia, coach sportif et ancienne athlète de haut niveau
+            ayant participé à deux Jeux Olympiques en athlétisme.<br /><br />Forte
+            de mon expérience sur les pistes et de mon expertise en préparation
+            athlétique, je mets aujourd’hui mes connaissances au service de
+            celles et ceux qui souhaitent atteindre leur plein potentiel.<br /><br />Mon
+            approche du coaching repose sur l’adaptation des techniques du haut
+            niveau à chacun, que vous soyez débutant, sportif confirmé ou en
+            quête de bien-être. À travers des séances privées ou en groupe, je
+            vous accompagne vers une meilleure santé physique, mentale et
+            émotionnelle.<br /><br />
+            Mon objectif : vous aider à vous dépasser, à renforcer votre corps
+            et votre esprit, et à intégrer l’excellence du sport de haut niveau
+            dans votre quotidien.<br /><br />Prêt ou prête à transformer votre
+            énergie en force ? Rejoignez-moi !<br /><br />Vous pouvez lire à mon
             sujet sur ma page
             <a
               class="underline"
@@ -275,7 +299,19 @@
             plus d'informations sur moi et les services que je propose.
           </p>
           <p class="about-para english">
-            Hello 👋 My name is Fabé Dia. I am an athlete who represented France in two Olympic Games for athletics, and I now work as a sports coach in the Var.<br /><br />You can also read about me on my
+            I am Fabé Dia, a sports coach and former elite athlete who competed
+            in two Olympic Games in athletics.<br /><br />Drawing from my
+            experience on the track and my expertise in athletic preparation, I
+            now use my knowledge to help those who want to reach their full
+            potential.<br /><br />My coaching approach is based on adapting
+            high-level techniques to each individual, whether you are a
+            beginner, an experienced athlete, or simply seeking well-being.
+            Through private or group sessions, I guide you toward better
+            physical, mental, and emotional health.<br /><br />My goal: to help
+            you push your limits, strengthen your body and mind, and integrate
+            the excellence of elite sports into your daily life.<br /><br />Ready
+            to turn your energy into strength? Join me!<br /><br />You can also
+            read about me on my
             <a
               class="underline"
               href="https://en.wikipedia.org/wiki/Fab%C3%A9_Dia"
@@ -402,6 +438,89 @@
             <div class="card-body">
               <blockquote class="blockquote mb-0">
                 <p class="french">
+                  Ma rencontre avec Fabé a été pour moi un arc en ciel après une
+                  après midi de pluie. Je m’étais égaré sur ce que j’aimais et
+                  je n’avais plus d’activité physique après avoir toujours été
+                  sportive. J’avais pris du poid, j’avais un rapport avec moi
+                  même qui était grossier et dévalorisant. Fabé a été pour moi
+                  bien plus qu’une coach de sport mais une coach de vie. Elle a
+                  su me faire ressortir la personne lumineuse qui étais enfouit
+                  en moi. Elle a su me redonner petit à petit confiance en moi,
+                  en mes valeurs et mes principes. Elle m’a donné courage à
+                  faire du ménage autour de moi et à m’autoriser d’être qui je
+                  suis, laisser cette petite fille mal mener s’ouvrir à la vie.
+                  Alors voilà vous l’aurez compris Fabé m’a fait souffrir dans
+                  le sport 😂 mais quelle liberté et oxygène elle m’a apporter.
+                  Je ne pense pas avoir rencontré déjà dans ma vie une personne
+                  aussi talentueuse, humble et humaine. Une personne admirable
+                  que j’aime profondément.<br />⭐️⭐️⭐️⭐️⭐️
+                </p>
+                <p class="english">
+                  Meeting Fabé was like a rainbow after an afternoon of rain. I
+                  had lost my way when it came to what I loved, and I was no
+                  longer doing any physical activity after having always been an
+                  athlete. I had gained weight, and my relationship with myself
+                  was harsh and demeaning. Fabé was much more than just a sports
+                  coach to me — she was a life coach. She managed to bring out
+                  the radiant person that had been buried within me. Little by
+                  little, she helped me regain confidence in myself, my values,
+                  and my principles. She gave me the courage to clear out the
+                  negativity around me and to allow myself to be who I truly am
+                  — to let that mistreated little girl open up to life. So yes,
+                  as you can imagine, Fabé made me suffer in sports 😂, but what
+                  a sense of freedom and breath of fresh air she brought me! I
+                  don’t think I’ve ever met someone so talented, humble, and
+                  deeply human. An admirable person whom I love dearly.<br />⭐️⭐️⭐️⭐️⭐️
+                </p>
+                <footer class="french blockquote-footer">
+                  Angélique, 32 (Cliente de coaching privé)
+                </footer>
+                <footer class="english blockquote-footer">
+                  Angélique, 32 (Private coaching client)
+                </footer>
+              </blockquote>
+            </div>
+          </div>
+          <div class="testimonial card">
+            <div class="card-body">
+              <blockquote class="blockquote mb-0">
+                <p class="french">
+                  La Fabé, femme merveilleuse ... ma sauveuse. Je sortais d'une
+                  période difficile de ma vie, et elle a réussi à la rendre plus
+                  vivable. Elle a été un rayon de soleil dans un ciel sombre.
+                  Rien que de savoir que j'avais un cours avec elle, c'était la
+                  VIE pour moi ... Recevoir un de ses messages, c'était comme
+                  respirer, comme voir la lumière. Je peux dire qu'elle m'a
+                  sauvée à vie. Son sourire, sa force, son esprit ont été pour
+                  moi un véritable refuge. Si je suis la femme que je suis
+                  aujourd’hui, c’est UNIQUEMENT grâce à toi, FABÉ. Tu es la
+                  personne la plus importante de ma vie … souviens-t'en
+                  toujours.<br />⭐️⭐️⭐️⭐️⭐️
+                </p>
+                <p class="english">
+                  Fabé, a wonderful woman … my savior. I was coming out of a
+                  difficult period in my life, and she managed to make it more
+                  livable. She was a ray of sunshine in a dark sky. Just knowing
+                  that I had a session with her was LIFE for me … Receiving a
+                  message from her was like breathing, like seeing the light. I
+                  can say that she saved me for life. Her smile, her strength,
+                  her spirit were a true refuge for me. If I am the woman I am
+                  today, it is ONLY thanks to you, FABÉ. You are the most
+                  important person in my life… always remember that.<br />⭐️⭐️⭐️⭐️⭐️
+                </p>
+                <footer class="french blockquote-footer">
+                  Gabriella, 52 (Cliente de coaching en ligne, Italie)
+                </footer>
+                <footer class="english blockquote-footer">
+                  Gabriella, 52 (Online coaching client, Italie)
+                </footer>
+              </blockquote>
+            </div>
+          </div>
+          <div class="testimonial card">
+            <div class="card-body">
+              <blockquote class="blockquote mb-0">
+                <p class="french">
                   Fabé est une coach exceptionelle avec une grande empathie et
                   toujours bienveillante. Elle nous pousse à nous dépasser ! Je
                   recommande à 200%<br />⭐️⭐️⭐️⭐️⭐️
@@ -412,7 +531,7 @@
                   recommend her 200%<br />⭐️⭐️⭐️⭐️⭐️
                 </p>
                 <footer class="blockquote-footer">
-                  Sandy (V-Forme, Carcès)
+                  Sandy, 38 (V-Forme, Carcès)
                 </footer>
               </blockquote>
             </div>
@@ -420,36 +539,29 @@
           <div class="testimonial card">
             <div class="card-body">
               <blockquote class="blockquote mb-0">
-                <p class="french">Ma rencontre avec Fabé a été pour moi un arc en ciel après une après midi de pluie. Je m’étais égaré sur ce que j’aimais et je n’avais plus d’activité physique après avoir toujours été sportive. J’avais pris du poid, j’avais un rapport avec moi même qui était grossier et dévalorisant. Fabé a été pour moi bien plus qu’une coach de sport mais une coach de vie. Elle a su me faire ressortir la personne lumineuse qui étais enfouit en moi. Elle a su me redonner petit à petit confiance en moi, en mes valeurs et mes principes. Elle m’a donné courage à faire du ménage autour de moi et à m’autoriser d’être qui je suis, laisser cette petite fille mal mener s’ouvrir à la vie. Alors voilà vous l’aurez compris Fabé m’a fait souffrir dans le sport 😂 mais quelle liberté et oxygène elle m’a apporter. Je ne pense pas avoir rencontré déjà dans ma vie une personne aussi talentueuse, humble et humaine. Une personne admirable que j’aime profondément.<br />⭐️⭐️⭐️⭐️⭐️
+                <p class="french">
+                  Mais je tiens quand même à te dire que je n’aime pas du tout
+                  le sport de base, mais alors pas du tout ! Cependant, avoir
+                  fait ta connaissance et venir à tes cours est un vrai plaisir
+                  pour moi. Tu m’as réconciliée avec le sport. Ta joie de vivre,
+                  ta bonne humeur, ton empathie, ton respect, ton humour, ton
+                  sourire et ton professionnalisme sont un vrai plaisir.<br />⭐️⭐️⭐️⭐️⭐️
                 </p>
-                <p class="english">Meeting Fabé was like a rainbow after an afternoon of rain. I had lost my way when it came to what I loved, and I was no longer doing any physical activity after having always been an athlete. I had gained weight, and my relationship with myself was harsh and demeaning. Fabé was much more than just a sports coach to me — she was a life coach. She managed to bring out the radiant person that had been buried within me. Little by little, she helped me regain confidence in myself, my values, and my principles. She gave me the courage to clear out the negativity around me and to allow myself to be who I truly am — to let that mistreated little girl open up to life. So yes, as you can imagine, Fabé made me suffer in sports 😂, but what a sense of freedom and breath of fresh air she brought me! I don’t think I’ve ever met someone so talented, humble, and deeply human. An admirable person whom I love dearly.<br />⭐️⭐️⭐️⭐️⭐️</p>
-                <footer class="blockquote-footer">Angélique (Cliente de coaching privé)</footer>
-              </blockquote>
-            </div>
-          <!-- </div>
-          <div class="testimonial card">
-            <div class="card-body">
-              <blockquote class="blockquote mb-0">
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  Integer posuere erat a ante.
+                <p class="english">
+                  But I still want to tell you that I don’t like sports at all,
+                  not even a little! However, getting to know you and attending
+                  your classes is a real pleasure for me. You have reconciled me
+                  with sports. Your joy for life, your good mood, your empathy,
+                  your respect, your humor, your smile, and your professionalism
+                  are truly a pleasure.<br />⭐️⭐️⭐️⭐️⭐️
                 </p>
-                <footer class="blockquote-footer">Name of person quoted</footer>
-              </blockquote>
-            </div>
-          </div>
-          <div class="testimonial card">
-            <div class="card-body">
-              <blockquote class="blockquote mb-0">
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  Integer posuere erat a ante.
-                </p>
-                <footer class="blockquote-footer">Name of person quoted</footer>
+                <footer class="blockquote-footer">
+                  Marion, 40 (Studio, Brignoles)
+                </footer>
               </blockquote>
             </div>
           </div>
-        </div> -->
+        </div>
       </section>
       <hr />
       <section class="contact">
