--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
           <img
             class="about-image img-fluid"
             src="./images/fabe2.jpg"
-            alt="Fabé tying shoe laces"
+            alt="Fabé"
           />
           <p class="about-para french">
             Je suis Fabé Dia, coach sportif et ancienne athlète de haut niveau
