update linkedin link

--- a/index.html
+++ b/index.html
@@ -719,7 +719,7 @@
         ><p>Instagram</p></a
       >
       <a
-        href="https://www.linkedin.com/in/fab%C3%A9-dia-16723760/?originalSubdomain=fr"
+        href="https://www.linkedin.com/in/fab%C3%A9-dia-oly-16723760/"
         target="_blank"
         ><p>LinkedIn</p></a
       >
