add another row of image cards

--- a/index.html
+++ b/index.html
@@ -178,6 +178,48 @@
             <p class="english card-text">PHYSICAL AND MENTAL WELLNESS</p>
           </div>
         </div>
+        <div class="card">
+          <img
+            class="card-img-top"
+            src="./images/pregnancy-training.png"
+            alt="Card image cap"
+          />
+          <div class="card-body">
+            <p class="french card-text">ACTIVITÉS PHYSIQUE ADAPTÉS</p>
+            <p class="english card-text">ADAPTED PHYSICAL ACTIVITIES</p>
+          </div>
+        </div>
+        <div class="card">
+          <img
+            class="card-img-top"
+            src="./images/stretching-rethaferguson.jpg"
+            alt="Card image cap"
+          />
+          <div class="card-body">
+            <p class="card-text">STRETCHING</p>
+          </div>
+        </div>
+        <div class="card">
+          <img
+            class="card-img-top"
+            src="./images/musculation-kampus.jpg"
+            alt="Card image cap"
+          />
+          <div class="card-body">
+            <p class="french card-text">RENFORCEMENT MUSCULAIRE</p>
+            <p class="english card-text">MUSCLE STRENGTHENING</p>
+          </div>
+        </div>
+        <div class="card">
+          <img
+            class="card-img-top"
+            src="./images/pilates-mat-koolshooters.jpg"
+            alt="Card image cap"
+          />
+          <div class="card-body">
+            <p class="card-text">PILATES MAT</p>
+          </div>
+        </div>
       </div>
     </header>
     <main>
