--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
               src="./images/undraw_personal-documents_uhkq.svg"
               alt="personalised programme"
             />
-            <h3 class="h3-undraw french">Programme personalisée</h3>
+            <h3 class="h3-undraw french">Programme personalisé</h3>
             <h3 class="h3-undraw english">Personalised training programme</h3>
           </div>
           <div>
