add video, change images, add to services text

--- a/index.html
+++ b/index.html
@@ -445,7 +445,51 @@
           isolant, le <strong>travail fonctionnel</strong> prend en compte toute
           la chaîne musculaire et les articulations. Le haut et le bas du corps
           travaillent en même temps et non de façon isolée. Des d’exercices sont
-          complets et ludiques.
+          complets et ludiques.<br /><br />En parallèle au
+          <strong>mouvement integral</strong> et son travail fonctionnel, il y a
+          le <strong>travail analytique</strong> et son panel d’exercices
+          choisis afin de renforcer le corps, améliorer la posture, et
+          travailler l’équilibre. L’utilisation de charges additionnelles grâce
+          aux machines de musculation, aux haltères, aux barres, aux kettlebell,
+          aux élastiques, et au Reformer permet d’augmenter la masse musculaire,
+          de renforcer les articulations et les tendons, mais aussi de prévenir
+          des blessures.<br /><br />Au-delà de la pratique sportive, les
+          bienfaits du renforcement musculaire sur la
+          <strong>santé générale</strong> des individus sont nombreux:
+        </p>
+        <p class="french explanation-para">
+          - Meilleure santé cardio-vasculaire
+        </p>
+        <p class="french explanation-para">
+          - Diminution des douleurs dorsales
+        </p>
+        <p class="french explanation-para">
+          - Meilleure densité osseuse (prévention de l’ostéoporose)
+        </p>
+        <p class="french explanation-para">
+          - Perte de poids : Un entrainement en résistance va déclencher
+          différents mécanismes physiologiques qui peuvent grandement contribuer
+          à la perte de masse grasse. Associé à un régime diététique, il
+          accélère le processus de perte de poids. Le renforcement musculaire
+          entraîne une élévation de la dépense énergétique, et donc de bruler
+          davantage de calories même au repos.
+        </p>
+        <p class="french explanation-para">
+          - On donne du galbe à la silhouette !
+        </p>
+
+        <p class="french explanation-para">
+          Les activités de <strong>stretching</strong> et de
+          <strong>pilates</strong> sont complémentaires au renforcement
+          musculaire et à tout autre type d’activité sportive en général. Elles
+          permettent également de passer un moment sportif différent des autres
+          activités beaucoup plus dynamiques.<br /><br />La combinaison
+          d’activités dynamiques et d’activités douces est un cocktail très
+          puissant pour le
+          <strong>bien être physique et mental</strong>.<br /><br />En fin,
+          l’étirement prépare le corps à l’exercice et aide à favoriser la
+          <strong>récupération</strong> après un effort physique; il peut être
+          actif ou passif.
         </p>
         <p class="english explanation-para">
           Everyday life is stressful, and the routine of commuting, working, and
@@ -467,7 +511,41 @@
           one or more muscles, <strong>functional training</strong> considers
           the entire muscle chain and the joints. Both the upper and lower body
           work together, rather than in isolation. The exercises are
-          comprehensive, engaging, and fun.
+          comprehensive, engaging, and fun.<br /><br />In parallel with
+          <strong>integral movement</strong> and its functional work, there is
+          <strong>analytical work</strong> and its selection of exercises
+          designed to strengthen the body, improve posture, and enhance balance.
+          The use of additional resistance through weight machines, dumbbells,
+          bars, kettlebells, resistance bands, and the Reformer helps increase
+          muscle mass, strengthen joints and tendons, and also prevent
+          injuries.<br /><br />Beyond sports practice, the benefits of muscle
+          strengthening on <strong>overall health</strong> are numerous:
+        </p>
+        <p class="english explanation-para">- Better cardiovascular health</p>
+        <p class="english explanation-para">- Reduction of back pain</p>
+        <p class="english explanation-para">
+          - Improved bone density (prevention of osteoporosis)
+        </p>
+        <p class="english explanation-para">
+          - Weight loss: Resistance training triggers various physiological
+          mechanisms that can greatly contribute to fat loss. When combined with
+          a proper diet, it accelerates the weight loss process. Muscle
+          strengthening increases energy expenditure, leading to more calories
+          burned, even at rest.
+        </p>
+        <p class="english explanation-para">
+          - It enhances the body's shape and definition!
+        </p>
+        <p class="english explanation-para">
+          <strong>Stretching</strong> and <strong>Pilates</strong> activities
+          complement muscle strengthening and all other types of sports
+          activities in general. They also provide a different kind of workout
+          compared to more dynamic activities.<br /><br />The combination of
+          dynamic activities and gentler exercises is a highly effective formula
+          for both <strong>physical and mental well-being</strong>.<br /><br />
+          Finally, stretching prepares the body for exercise and helps promote
+          <strong>recovery</strong> after physical effort; it can be active or
+          passive.
         </p>
       </section>
       <hr />
@@ -662,6 +740,16 @@
           <iframe
             width="280"
             height="157.5"
+            src="./images/Portrait - Fabé Dia.mp4"
+            title="ATD Consulting video"
+            frameborder="0"
+            allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin"
+            allowfullscreen
+          ></iframe>
+          <iframe
+            width="280"
+            height="157.5"
             src="https://www.youtube.com/embed/xC5StTlrY0c?si=0R4RZNz43QSUtzxT"
             title="YouTube video player"
             frameborder="0"
@@ -679,67 +767,55 @@
             referrerpolicy="strict-origin-when-cross-origin"
             allowfullscreen
           ></iframe>
+
           <img
-            width="280"
-            height="157.5"
+            class="landscape"
             src="./images/fabe6group.jpg"
             alt="Fabé with a training group"
           />
           <img
-            width="280"
-            height="157.5"
+            class="medals landscape"
+            src="./images/gold-medal.jpg"
+            alt="Fabé with medal winning team"
+          />
+          <img
+            class="landscape"
             src="./images/fabe14.jpg"
             alt="Fabé carrying Olympic torch"
           />
         </div>
         <div class="vertical-gallery">
           <img
-            width="157.5"
-            height="200"
-            src="./images/fabe1.jpg"
-            alt="Fabé warming up"
+            class="portrait"
+            src="./images/v-forme-training.jpeg"
+            alt="Fabé training male"
           />
           <img
-            width="157.5"
-            height="200"
-            src="./images/fabe3.jpg"
-            alt="Fabé in studio"
+            class="portrait"
+            src="./images/v-forme-training-female.jpeg"
+            alt="Fabé training female"
           />
 
           <img
-            width="157.5"
-            height="200"
+            class="portrait"
             src="./images/fabe10.jpg"
             alt="Fabé demonstrating equipment"
           />
+          <img class="portrait" src="./images/fabe8.jpg" alt="Fabé running" />
           <img
-            width="157.5"
-            height="200"
-            src="./images/fabe8.jpg"
-            alt="Fabé running"
-          />
-          <img
-            width="157.5"
-            height="200"
+            class="portrait"
             src="./images/fabe9.jpg"
             alt="Fabé interviewing"
           />
           <img
-            width="157.5"
-            height="200"
-            src="./images/fabe12.jpg"
+            class="portrait"
+            src="./images/wall-training.jpeg"
             alt="Fabé sitting"
           />
 
+          <img class="portrait" src="./images/fabe16.jpg" alt="Fabé smiling" />
           <img
-            width="157.5"
-            height="200"
-            src="./images/fabe16.jpg"
-            alt="Fabé smiling"
-          />
-          <img
-            width="157.5"
-            height="200"
+            class="portrait"
             src="./images/fabe15.jpg"
             alt="Fabé stretching"
           />
