alter video tag

--- a/index.html
+++ b/index.html
@@ -737,16 +737,9 @@
         <h2 class="french gap-top">Galerie</h2>
         <h2 class="english gap-top">Gallery</h2>
         <div class="horizontal-gallery">
-          <iframe
-            width="280"
-            height="157.5"
-            src="./images/Portrait - Fabé Dia.mp4"
-            title="ATD Consulting video"
-            frameborder="0"
-            allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            referrerpolicy="strict-origin-when-cross-origin"
-            allowfullscreen
-          ></iframe>
+          <video width="280" height="157.5" controls>
+            <source src="./images/Portrait - Fabé Dia.mp4" type="video/mp4" />
+          </video>
           <iframe
             width="280"
             height="157.5"
