--- a/index.html
+++ b/index.html
@@ -737,7 +737,7 @@
         <h2 class="french gap-top">Galerie</h2>
         <h2 class="english gap-top">Gallery</h2>
         <div class="horizontal-gallery">
-          <video>
+          <video min-width="280" min-height="157.5" controls>
             <source src="./images/Portrait - Fabé Dia.mp4" type="video/mp4" />
           </video>
           <iframe
