media query tweaks to img gallery

--- a/index.html
+++ b/index.html
@@ -737,9 +737,9 @@
         <h2 class="french gap-top">Galerie</h2>
         <h2 class="english gap-top">Gallery</h2>
         <div class="horizontal-gallery">
-          <video min-width="280" min-height="157.5" controls>
-            <source src="./images/Portrait - Fabé Dia.mp4" type="video/mp4" />
-          </video>
+          <!-- <video min-width="280" min-height="157.5" controls>
+            <source src="./images/Portrait-FabéDia.mp4" type="video/mp4" />
+          </video> -->
           <iframe
             width="280"
             height="157.5"
@@ -766,11 +766,11 @@
             src="./images/fabe6group.jpg"
             alt="Fabé with a training group"
           />
-          <img
+          <!-- <img
             class="medals landscape"
             src="./images/gold-medal.jpg"
             alt="Fabé with medal winning team"
-          />
+          /> -->
           <img
             class="landscape"
             src="./images/fabe14.jpg"
