--- a/index.html
+++ b/index.html
@@ -676,7 +676,43 @@
                   are truly a pleasure.<br />⭐️⭐️⭐️⭐️⭐️
                 </p>
                 <footer class="blockquote-footer">
-                  Marion, 40 (Studio, Brignoles)
+                  Marion, 40 (Brignoles)
+                </footer>
+              </blockquote>
+            </div>
+          </div>
+          <div class="testimonial card">
+            <div class="card-body">
+              <blockquote class="blockquote mb-0">
+                <p class="french">
+                  Passionnée de running, j’avais besoin de conseils pour
+                  compléter mes entraînements de course à pied. Adepte du
+                  renforcement musculaire à la maison, j’ai souhaité un coaching
+                  personnalisé régulier avec Fabé pour évoluer dans mes
+                  objectifs personnels. Sportive de haut niveau, cette femme
+                  aussi dynamique que professionnelle me conseille avec
+                  bienveillance et bonne humeur, lors de nos séances matinales !
+                  Fabé me renseigne sur tous les sujets qui entourent le sport,
+                  le corps, le mental, la nutrition et la santé. J’ai découvert
+                  les bienfaits du Reformer sollicitant les muscles profonds
+                  tout en douceur. Voilà pour moi une activité sportive
+                  complémentaire alliant sport et bien-être.<br />⭐️⭐️⭐️⭐️⭐️
+                </p>
+                <p class="english">
+                  Passionate about running, I needed advice to complement my
+                  running training. A fan of strength training at home, I wanted
+                  regular personalised coaching with Fabé to progress toward my
+                  personal goals. A high-level athlete, this woman — both
+                  dynamic and professional — guides me with kindness and good
+                  humour during our morning sessions! Fabé provides me with
+                  insights into all topics related to sports, the body, the
+                  mind, nutrition, and health. I discovered the benefits of the
+                  Reformer, which engages deep muscles gently. For me, this is
+                  the perfect complementary activity, combining fitness and
+                  well-being.<br />⭐️⭐️⭐️⭐️⭐️
+                </p>
+                <footer class="blockquote-footer">
+                  Ingrid, 44 (Brignoles)
                 </footer>
               </blockquote>
             </div>
