--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
               src="./images/undraw_personal-documents_uhkq.svg"
               alt="personalised programme"
             />
-            <h3 class="h3-undraw french">Programme personalisé</h3>
+            <h3 class="h3-undraw french">Programme personnalisé</h3>
             <h3 class="h3-undraw english">Personalised training programme</h3>
           </div>
           <div>
@@ -418,7 +418,7 @@
               src="./images/undraw_yoga_yy99.svg"
               alt="yoga"
             />
-            <h3 class="h3-undraw french">Retrouvez votre equilibre</h3>
+            <h3 class="h3-undraw french">Retrouvez votre équilibre</h3>
             <h3 class="h3-undraw english">Rediscover your balance</h3>
           </div>
         </div>
