--- a/index.html
+++ b/index.html
@@ -717,6 +717,51 @@
               </blockquote>
             </div>
           </div>
+          <div class="testimonial card">
+            <div class="card-body">
+              <blockquote class="blockquote mb-0">
+                <p class="french">
+                  Fabé a été l’une de mes plus belles rencontres 2024. Elle m’a
+                  énormément aidée autant au plan professionnel que personnel.
+                  Ça été plus qu’une coach mais une amie, un exemple, une force,
+                  un soutien ! La connexion est directement passée et le travail
+                  que nous avons fait durant 3 mois m’a énormément apporté.
+                  Biensur qu’il y avait de la douleur physique mais c’était
+                  toujours avec des rires, de la bonne humeur et du soutien. Je
+                  ne me suis jamais sentie aussi bien a faire du sport, dépasser
+                  ses limites, avoir mal, qu’avec Fabé à côté pour me motiver !!
+                  Elle est un exemple pour moi et m’aide toujours dans mon
+                  chemin de vie. J’habite aux États-Unis donc je ne peux
+                  malheureusement pas travailler avec elle comme j’aimerais. Je
+                  conseille à toutes personnes d’avoir une Fabé dans vos vies !!
+                  Et vous aideras à atteindre vos objectifs. En tout cas sans
+                  aucun doutes des que je rentres pour quelques mois ce sera
+                  avec elle que je continuerai à travailler dur pour atteindre
+                  mes objectifs. Encore milles Merci!!! <br />⭐️⭐️⭐️⭐️⭐️
+                </p>
+                <p class="english">
+                  Fabé was one of the most amazing people I met in 2024. She
+                  helped me tremendously, both professionally and personally.
+                  She was more than just a coach — she was a friend, a role
+                  model, a source of strength, and a great support! We connected
+                  instantly, and the work we did over three months brought me so
+                  much. Of course, there was physical pain, but it was always
+                  accompanied by laughter, good vibes, and encouragement. I’ve
+                  never felt so good while working out, pushing my limits,
+                  feeling the pain — because with Fabé by my side, I was always
+                  motivated. She is an inspiration to me and continues to
+                  support me on my journey. I live in the United States, so
+                  unfortunately, I can't train with her as much as I’d like, but
+                  I highly recommend everyone to have a "Fabé" in their lives —
+                  they will help you reach your goals! Without a doubt, whenever
+                  I come back for a few months, I will continue working hard
+                  with her to achieve my objectives. A thousand thanks again!!!
+                  <br />⭐️⭐️⭐️⭐️⭐️
+                </p>
+                <footer class="blockquote-footer">Adèle, 22 (New York)</footer>
+              </blockquote>
+            </div>
+          </div>
         </div>
       </section>
       <hr />
