--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       href="https://fonts.googleapis.com/css2?family=Bonheur+Royale&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="styles.css?v=22" />
+    <link rel="stylesheet" href="styles.css?v=23" />
     <title>Fabé Dia</title>
     <meta
       name="description"
@@ -785,9 +785,10 @@
           <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5110.342790921619!2d6.068922875543465!3d43.405689468404866!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12c94206c3c635c3%3A0x45bddc584aa55d1!2s1%20Av.%20Henri%20Buzzegoli%2C%2083170%20Brignoles!5e1!3m2!1sen!2sfr!4v1737630887926!5m2!1sen!2sfr"
             class="responsive-iframe"
+            width="100%"
+            height="100%"
             style="border: 0"
             allowfullscreen=""
-            loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"
             title="Map showing Fabé Dia's studio location at 1 Avenue Henri Buzzegoli, 83170 Brignoles"
           ></iframe>
@@ -912,6 +913,8 @@
       >
     </footer>
     <script>
+      // Wait for DOM to be fully loaded
+      document.addEventListener('DOMContentLoaded', function() {
       // Language switching functionality
       document
         .getElementById("frenchBtn")
@@ -1010,7 +1013,9 @@
       const galleryPhotosRight = document.getElementById("galleryPhotosRight");
 
       if (galleryPhotosCarousel && galleryPhotosLeft && galleryPhotosRight) {
-        const scrollAmount = 210; // Photo width + gap (reduced by 30%)
+        // Calculate scroll amount based on photo width + gap
+        const firstPhoto = galleryPhotosCarousel.querySelector('.gallery-photo');
+        const scrollAmount = firstPhoto ? firstPhoto.offsetWidth + 20 : 300; // photo width + 20px gap
 
         galleryPhotosLeft.addEventListener("click", function () {
           galleryPhotosCarousel.scrollBy({
@@ -1040,6 +1045,7 @@
         galleryPhotosCarousel.addEventListener("scroll", updateGalleryArrows);
         updateGalleryArrows(); // Initial check
       }
+      }); // End DOMContentLoaded
     </script>
   </body>
 </html>
