Simplify gallery carousel to match working card carousel structure
- Remove DOMContentLoaded wrapper and complex initialization
- Remove button cloning logic
- Use same simple structure as working card carousel
- Remove type='button' attribute to match working carousel

--- a/index.html
+++ b/index.html
@@ -814,7 +814,7 @@
         
         <!-- Photos Carousel -->
         <div class="gallery-photos-wrapper">
-          <button type="button" class="carousel-arrow carousel-arrow-left" aria-label="Scroll photos left" id="galleryPhotosLeft">
+          <button class="carousel-arrow carousel-arrow-left" aria-label="Scroll photos left" id="galleryPhotosLeft">
             <i class="fa-solid fa-chevron-left" aria-hidden="true"></i>
           </button>
           <div class="gallery-photos-container" id="galleryPhotosCarousel">
@@ -869,7 +869,7 @@
               loading="lazy"
             />
           </div>
-          <button type="button" class="carousel-arrow carousel-arrow-right" aria-label="Scroll photos right" id="galleryPhotosRight">
+          <button class="carousel-arrow carousel-arrow-right" aria-label="Scroll photos right" id="galleryPhotosRight">
             <i class="fa-solid fa-chevron-right" aria-hidden="true"></i>
           </button>
         </div>
