Fix gallery carousel button clicks: increase z-index and keep pointer-events enabled
- Increase button z-index to 100 to ensure they're above container
- Set container z-index to 1 to create proper stacking context
- Keep pointer-events enabled (don't disable on disabled state)
- Change cursor instead of disabling pointer-events

--- a/index.html
+++ b/index.html
@@ -1061,9 +1061,10 @@
           const isAtEnd = galleryPhotosCarousel.scrollLeft >= galleryPhotosCarousel.scrollWidth - galleryPhotosCarousel.clientWidth - 10;
           
           galleryPhotosLeft.style.opacity = isAtStart ? "0.3" : "1";
-          galleryPhotosLeft.style.pointerEvents = isAtStart ? "none" : "auto";
+          // Don't disable pointer-events, just make it visually disabled
+          galleryPhotosLeft.style.cursor = isAtStart ? "not-allowed" : "pointer";
           galleryPhotosRight.style.opacity = isAtEnd ? "0.3" : "1";
-          galleryPhotosRight.style.pointerEvents = isAtEnd ? "none" : "auto";
+          galleryPhotosRight.style.cursor = isAtEnd ? "not-allowed" : "pointer";
         }
 
         galleryPhotosCarousel.addEventListener("scroll", updateGalleryArrows);
